cbits/Bullet.h

void btRigidBody_setNewBroadphaseProxy(void *c,void* p0); //method: setNewBroadphaseProxy void ( ::btRigidBody::* )( ::btBroadphaseProxy * ) 
void btRigidBody_getVelocityInLocalPoint(void *c,float* p0,float* ret); //method: getVelocityInLocalPoint ::btVector3 ( ::btRigidBody::* )( ::btVector3 const & ) const
int btRigidBody_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btRigidBody::* )(  ) const
void btRigidBody_setAngularVelocity(void *c,float* p0); //method: setAngularVelocity void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_getLinearFactor(void *c,float* ret); //method: getLinearFactor ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_predictIntegratedTransform(void *c,float p0,float* p1); //method: predictIntegratedTransform void ( ::btRigidBody::* )( ::btScalar,::btTransform & ) 
void btRigidBody_internalGetAngularFactor(void *c,float* ret); //method: internalGetAngularFactor ::btVector3 const & ( ::btRigidBody::* )(  ) const
float btRigidBody_getAngularSleepingThreshold(void *c); //method: getAngularSleepingThreshold ::btScalar ( ::btRigidBody::* )(  ) const
void btRigidBody_applyDamping(void *c,float p0); //method: applyDamping void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_saveKinematicState(void *c,float p0); //method: saveKinematicState void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_setSleepingThresholds(void *c,float p0,float p1); //method: setSleepingThresholds void ( ::btRigidBody::* )( ::btScalar,::btScalar ) 
void btRigidBody_getAngularVelocity(void *c,float* ret); //method: getAngularVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
float btRigidBody_getLinearSleepingThreshold(void *c); //method: getLinearSleepingThreshold ::btScalar ( ::btRigidBody::* )(  ) const
void btRigidBody_internalGetInvMass(void *c,float* ret); //method: internalGetInvMass ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_applyTorqueImpulse(void *c,float* p0); //method: applyTorqueImpulse void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_internalGetPushVelocity(void *c,float* ret); //method: internalGetPushVelocity ::btVector3 & ( ::btRigidBody::* )(  ) 
void btRigidBody_setLinearFactor(void *c,float* p0); //method: setLinearFactor void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_serializeSingleObject(void *c,void* p0); //method: serializeSingleObject void ( ::btRigidBody::* )( ::btSerializer * ) const
float btRigidBody_getInvMass(void *c); //method: getInvMass ::btScalar ( ::btRigidBody::* )(  ) const
void btRigidBody_getTotalForce(void *c,float* ret); //method: getTotalForce ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getCenterOfMassPosition(void *c,float* ret); //method: getCenterOfMassPosition ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getAabb(void *c,float* p0,float* p1); //method: getAabb void ( ::btRigidBody::* )( ::btVector3 &,::btVector3 & ) const